resolving fixed header z-index issue

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -438,7 +438,7 @@ header {
     /*top:0;
     left:0;*/
     width:100%;
-    z-index:99999999;
+    z-index:9999;
 
     @include bp-small {
       position:relative;
